Fix word wrap on listIcon explanation for non-logged-in user

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -374,6 +374,10 @@ select.bggFilterInput {
   height: 1em;
 }
 
+.listPopupPreview {
+  white-space: nowrap;
+}
+
 #currentGames {
   width: 90vw;
   height: var(--vh90);
